--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <h2 class="card-title text-center mb-2">Oil boiler vs Heat pump estimator</h2>
                         <div class="mb-2">
                             <label for="oil" class="form-label">Heating oil per litre (£)</label>
-                            <input type="number" id="oil" class="form-control narrow-input" value="0.72" step="0.01">
+                            <input type="number" id="oil" class="form-control narrow-input" value="0.70" step="0.01">
                         </div>
                         <div class="mb-2">
                             <label for="eff" class="form-label">Boiler efficiency % (typical condensing 93% non condensing 70%)</label>
@@ -39,17 +39,21 @@
                         </div>
                         <div class="mb-2">
                             <label for="electric" class="form-label">Electric (£ kWh)</label>
-                            <input type="number" id="electric" class="form-control narrow-input" value="0.22494" step="0.01">
+                            <input type="number" id="electric" class="form-control narrow-input" value="0.2486" step="0.001">
                         </div>
                         <div class="mb-2">
-                            <label for="scop" class="form-label">Heat pump SCOP (3 - 4 typical 3.4)</label>
-                            <input type="number" id="scop" class="form-control narrow-input" value="3.4" step="0.01" min="1" max="10">
+                            <label for="scop" class="form-label">Heat pump SCOP (3 - 5 typical 3.6)</label>
+                            <input type="number" id="scop" class="form-control narrow-input" value="3.6" step="0.01" min="1" max="10">
                         </div>
                         <div class="mt-2">
                             <p>Oil boiler kW of heat: <b>£</b><span id="oilResult" class="fw-bold"></span></p>
                             <p>Heat pump kW of heat: <b>£</b><span id="heatPumpResult" class="fw-bold"></span></p>
                             <p>Estimate: The heat pump will cost <span id="result" class="fw-bold"></span><b>%</b> of the oil boiler running cost.</p>
                             <p>Winner: <span id="winner" class="fw-bold"></span></p>
+                        </div>
+                        <div>
+                            Heat pump performace will vary dependant on usage. Ideally heat pumps should be always on or
+                            with small set back tempeatures.
                         </div>
                     </div>
                 </div>
